JPA Update Beer Not Found